2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Do not null-terminated the array 
	given to tp_connection_get_contacts_by_handle() though I still get an 
	error about handle #2 having no contact-id.

2008-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/insert_example_code.pl: Base this on the gtkmm-documentation 
	one rather than the flumotion-doc one (but using .c, not .cc), to 
	read all files in a directory rather than individual files.
	* doc/book/Makefile.am: Call insert_example_code.pl with the correct 
	path.
	* doc/book/C/telepathy.xml: Add the examples at some vaguely 
	appropriate places, to check that this works.

2008-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Define a base URL entity and use ulink to 
	link to types, interfaces and methods in the Telepathy specification.

2008-12-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/send_message/main.c: Implement code to get a text 
	channel and send a message on it, though (like the list_contacts example) 
	it does not work now due to this error from 
	tp_connection_get_contacts_by_id():
        Connection manager :1.171 is broken: contact #2 in the GetContactAttributes result has no contact-id

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/Makefile.am
	* docs/examples/send_message/main.c:  Added the beginnings of a 
	an example to send a single message to a single specific contact.

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/set_presence/main.c: 
	* docs/examples/list_contacts/main.c: Use the *_call_when_ready() 
	functions instead of *_run_until_ready().

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/set_presence/main.c: Wait until the connection is 
	ready, so that setting of the presence can succeed. 

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/Makefile.am