@@ -1,5 +1,12 @@
 2008-12-15  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/examples/send_message/main.c: Set the TargetHandleType too, 
+	though this then crashes: 
+	https://bugs.freedesktop.org/show_bug.cgi?id=19523
+	(The previous mentioned error was fixed by upgrading telepathy-gabble.)
+
+2008-12-15  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/examples/list_contacts/main.c: Do not null-terminated the array 
 	given to tp_connection_get_contacts_by_handle() though I still get an 
 	error about handle #2 having no contact-id.
